testData/fqcn/annotator/SecondEndTokenFQCNUnresolved.Camel
${bodyAs(java.<error descr="Unresolved Reference">foo</error>.<error descr="Unresolved Reference">MissingReference</error>)}